--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,11 @@ name = "pypi"
 
 [packages]
 jupyter = "*"
+eth-keys = "*"
+"web3" = "*"
+"secp256k1" = "*"
+pem = "*"
+ecdsa = "*"
 
 [dev-packages]
 
