--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,11 @@ name = "pypi"
 jupyter = "*"
 eth-keys = "*"
 "web3" = "*"
-"secp256k1" = "*"
-pem = "*"
-ecdsa = "*"
+#"secp256k1" = "*"
+#pem = "*"
+#ecdsa = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.6"
+python_version = "3.7"
